sql/sql_parse.cc
@@ -3249,11 +3249,6 @@ purposes internal to the MySQL server", MYF(0));
     }
     if (check_access(thd,SELECT_ACL,lex->name,0,1,0))
       break;
-    if (thd->locked_tables || thd->active_transaction())
-    {
-      send_error(thd,ER_LOCK_OR_ACTIVE_TRANSACTION);
-      goto error;
-    }
     res=mysqld_show_create_db(thd,lex->name,&lex->create_info);
     break;
   }
